--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KING ROY - известный мировой бренд, произведенный в Тайване</title>
-    <meta name="description" content="Инструмент KING ROY – это не просто высококачественный и надёжный инструмент, это уникальные комплексные решения для ремонта и обслуживания автомобилей. Главный принцип нашей компании – профессиональный инструмент не должен быть роскошью">
+    <meta name="description"
+        content="Инструмент KING ROY – это не просто высококачественный и надёжный инструмент, это уникальные комплексные решения для ремонта и обслуживания автомобилей. Главный принцип нашей компании – профессиональный инструмент не должен быть роскошью">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -23,11 +24,12 @@
             <div class="collapse navbar-collapse" id="navbarToggler">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="#main_description" class="nav-link pr-0 text-warning font-weight-bold bg-dark">Описание бренда<i
-                                class="fas fa-angle-double-right px-2 text-warning"></i></a>
+                        <a href="#main_description" class="nav-link pr-0 text-warning font-weight-bold bg-dark">Описание
+                            бренда<i class="fas fa-angle-double-right px-2 text-warning"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a href="pdf/test.pdf" class="nav-link pr-0 text-warning font-weight-bold bg-dark" target="_blank">Каталог инструментов<i
+                        <a href="pdf/test.pdf" class="nav-link pr-0 text-warning font-weight-bold bg-dark"
+                            target="_blank">Каталог инструментов<i
                                 class="fas fa-angle-double-right px-2 text-warning"></i></a>
                     </li>
                     <li class="nav-item">
@@ -50,9 +52,6 @@
             </div>
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 px-0">
                 <div class="col-md-12 h3 bg-secondary pl-4 py-2 text-left d-none d-sm-block">PROFESSIONAL TOOLS</div>
-                <!--<div class="col-md-12">
-                    
-                </div>-->
             </div>
         </div>
     </div>
@@ -65,13 +64,14 @@
                     <p class="card-text">
                         <div class="container">
                             <div class="row text-center">
-                                <div class="col-md-12 col-sm-12 col-xs-12 pt-md-5 pb-4 border_bottom_2 display-4 top_banner">
+                                <div
+                                    class="col-md-12 col-sm-12 col-xs-12 pt-md-5 pb-4 border_bottom_2 display-4 top_banner">
                                     ИНСТРУМЕНТ ДЛЯ ПРОФЕССИОНАЛОВ
                                 </div>
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12 ml-5 d-none d-md-block d-xl-block">
                                 <a href="pdf/test.pdf"
-                                    class="btn border_2 btn-warning ml-md-5 mt-md-5 text-secondery shadow rounded font-weight-bold"
+                                    class="btn btn-warning ml-md-5 mt-md-5 text-secondery shadow rounded font-weight-bold"
                                     target="_blank">КАТАЛОГ
                                     ИНСТРУМЕНТОВ<i class="fas fa-angle-double-right pl-2 text-dark"></i></a>
                             </div>
@@ -84,90 +84,127 @@
 
     <div class="row text-center">
         <div class="col border_top_5 h5 py-4 my-auto text-light" style="background-color:black">
-            <span class="text-warning" id="main_description">KING ROY</span> - ИЗВЕСТНЫЙ МИРОВОЙ БРЕНД, ПРОИЗВЕДЕННЫЙ В ТАЙВАНЕ.
+            <span class="text-warning" id="main_description">KING ROY</span> - ИЗВЕСТНЫЙ МИРОВОЙ БРЕНД, ПРОИЗВЕДЕННЫЙ В
+            ТАЙВАНЕ.
         </div>
     </div>
 
     <div class="container-fluid" style="background-color:lightgray">
         <div class="container">
             <div class="row bg-light">
-                <div class="col-md-12 col-sm-12 col-xs-12 p-5 text-left" id="main_text">        
- Линия механического автослесарного инструмента была основана в 1978 году в Германии и с самого
- своего основания была ориентирована в первую очередь на профессионального потребителя. Наладив
- сбытовую сеть на внутреннем рынке, с середины 80-х годов, продукт начали продвигать в соседние
- европейские страны: Австрию, Италию и Голландию. В этих странах и сегодня имеется устойчивый спрос
- на качественную продукцию KING ROY. В конце 90-х годов производство было перенесено в Тайвань, где
- продукция KING ROY получила дополнительное конкурентное преимущество в виде низкой себестоимости,
- сумев при этом сохранить неизменно высокое качество.
-    <p>Инструмент, изготовленный из легированной хромованадиевой стали с термической обработкой, на самом
- современном оборудовании с использованием передовых достижений в металлообработке. Производство
- имеет сертификат ISO 9001:2000. Товары тайванского производителя, отвечают требованиям стандартов
- DIN, ANSI, полностью соответствуют требованиям ГОСТа. Одновременно на территории завода KING ROY
- была создана современная испытательная база. Она постоянно развивалась и в настоящее время
- используется для выборочного разрушающего контроля готовой продукции.
-    <p>Продукция маркируется зарегистрированным в большинстве стран мира логотипом. Не меньшее внимание
- уделяется внешнему виду инструмента. Торцевые головки производства KING ROY мгновенно распознаются
- не только по великолепной отделке, но и по характерным красным и синим полосам, обозначающим
- метрические и дюймовые размеры.
-    <p>Демократичная ценовая политика, высокая надёжность инструмента и широкий ассортимент моделей
- позволили серьёзно расширить круг потребителей. К сегодняшнему дню ореол продаж KING ROY
- распространяется не только на Европу, но и на Латинскую Америку, страны Азии и Ближнего Востока.
-    <p>Мы предлагаем вам качественный профессиональный инструмент по доступной не только специалистам цене.
- Мы гарантируем серьёзную программу поддержки бизнеса нашим партнерам и надёжную работу инструмента
- мастеру, который будет им пользоваться. Постоянно расширяя дилерскую сеть, мы наблюдаем, что
- инструмент востребован и нравится конечному потребителю. Мы постоянно совершенствуем нашу продукцию,
- развиваем новые направления инструментов, улучшая их качество и продлевая срок эксплуатации.
-    <p>Инструмент KING ROY – это не просто высококачественный и надёжный инструмент, это уникальные
- комплексные решения для ремонта и обслуживания автомобилей. Главный принцип нашей компании –
- профессиональный инструмент не должен быть роскошью.
-    <p>Сегодня пользователями инструмента KING ROY являются как предприятия автотехобслуживания, крупные
- машиностроительные производства, так и частные ценители качественного инструмента, на который
- распространяется понятия «ПОЖИЗНЕННАЯ ГАРАНТИЯ».
-    <p>«ПОЖИЗНЕННАЯ ГАРАНТИЯ» - это объявление неограниченного срока поддержания гарантийных обязательств,
- т. е. инструмент, вышедший из строя вследствие использования некачественных материалов или нарушения
- технологии в процессе его производства – подлежит замене. Другими словами, подлежит замене
- инструмент, имеющий дефект, обнаруженный или возникший в результате нарушений при производстве и
- делающий невозможным дальнейшее использование инструмента. Если инструмент вышел из строя по причине
- естественного износа, то это не свидетельствует непосредственно о качестве материала и не доказывает
- нарушения технологического процесса и гарантийным случаем не является.
-    <p>На инструмент, имеющий в своей конструкции кинематическую схему, в связи с сокращенным сроком
- эксплуатации, связанным с повышенным износом при использовании, распространяется понятие
- «ограниченной гарантии». Вставки-биты являются расходным материалом, гарантия на них не
- распространяется, как и на гибкие удлинители не способные, в силу своих конструкционных особенностей
- передавать большой крутящий момент.
-    <p>Приглашаем Вас ознакомиться с продукцией KING ROY, представленной в данном каталоге и будем рады
- видеть Вас в качестве наших партнеров для совместного продвижения инструмента KING ROY.
+                <div class="col-md-12 col-sm-12 col-xs-12 p-5 text-left" id="main_text">
+                    Линия механического автослесарного инструмента была основана в 1978 году в Германии и с самого
+                    своего основания была ориентирована в первую очередь на профессионального потребителя. Наладив
+                    сбытовую сеть на внутреннем рынке, с середины 80-х годов, продукт начали продвигать в соседние
+                    европейские страны: Австрию, Италию и Голландию. В этих странах и сегодня имеется устойчивый спрос
+                    на качественную продукцию KING ROY. В конце 90-х годов производство было перенесено в Тайвань, где
+                    продукция KING ROY получила дополнительное конкурентное преимущество в виде низкой себестоимости,
+                    сумев при этом сохранить неизменно высокое качество.
+                    <p>Инструмент, изготовленный из легированной хромованадиевой стали с термической обработкой, на
+                        самом
+                        современном оборудовании с использованием передовых достижений в металлообработке. Производство
+                        имеет сертификат ISO 9001:2000. Товары тайванского производителя, отвечают требованиям
+                        стандартов
+                        DIN, ANSI, полностью соответствуют требованиям ГОСТа. Одновременно на территории завода KING ROY
+                        была создана современная испытательная база. Она постоянно развивалась и в настоящее время
+                        используется для выборочного разрушающего контроля готовой продукции.
+                        <p>Продукция маркируется зарегистрированным в большинстве стран мира логотипом. Не меньшее
+                            внимание
+                            уделяется внешнему виду инструмента. Торцевые головки производства KING ROY мгновенно
+                            распознаются
+                            не только по великолепной отделке, но и по характерным красным и синим полосам, обозначающим
+                            метрические и дюймовые размеры.
+                            <p>Демократичная ценовая политика, высокая надёжность инструмента и широкий ассортимент
+                                моделей
+                                позволили серьёзно расширить круг потребителей. К сегодняшнему дню ореол продаж KING ROY
+                                распространяется не только на Европу, но и на Латинскую Америку, страны Азии и Ближнего
+                                Востока.
+                                <p>Мы предлагаем вам качественный профессиональный инструмент по доступной не только
+                                    специалистам цене.
+                                    Мы гарантируем серьёзную программу поддержки бизнеса нашим партнерам и надёжную
+                                    работу инструмента
+                                    мастеру, который будет им пользоваться. Постоянно расширяя дилерскую сеть, мы
+                                    наблюдаем, что
+                                    инструмент востребован и нравится конечному потребителю. Мы постоянно совершенствуем
+                                    нашу продукцию,
+                                    развиваем новые направления инструментов, улучшая их качество и продлевая срок
+                                    эксплуатации.
+                                    <p>Инструмент KING ROY – это не просто высококачественный и надёжный инструмент, это
+                                        уникальные
+                                        комплексные решения для ремонта и обслуживания автомобилей. Главный принцип
+                                        нашей компании –
+                                        профессиональный инструмент не должен быть роскошью.
+                                        <p>Сегодня пользователями инструмента KING ROY являются как предприятия
+                                            автотехобслуживания, крупные
+                                            машиностроительные производства, так и частные ценители качественного
+                                            инструмента, на который
+                                            распространяется понятия «ПОЖИЗНЕННАЯ ГАРАНТИЯ».
+                                            <p>«ПОЖИЗНЕННАЯ ГАРАНТИЯ» - это объявление неограниченного срока поддержания
+                                                гарантийных обязательств,
+                                                т. е. инструмент, вышедший из строя вследствие использования
+                                                некачественных материалов или нарушения
+                                                технологии в процессе его производства – подлежит замене. Другими
+                                                словами, подлежит замене
+                                                инструмент, имеющий дефект, обнаруженный или возникший в результате
+                                                нарушений при производстве и
+                                                делающий невозможным дальнейшее использование инструмента. Если
+                                                инструмент вышел из строя по причине
+                                                естественного износа, то это не свидетельствует непосредственно о
+                                                качестве материала и не доказывает
+                                                нарушения технологического процесса и гарантийным случаем не является.
+                                                <p>На инструмент, имеющий в своей конструкции кинематическую схему, в
+                                                    связи с сокращенным сроком
+                                                    эксплуатации, связанным с повышенным износом при использовании,
+                                                    распространяется понятие
+                                                    «ограниченной гарантии». Вставки-биты являются расходным материалом,
+                                                    гарантия на них не
+                                                    распространяется, как и на гибкие удлинители не способные, в силу
+                                                    своих конструкционных особенностей
+                                                    передавать большой крутящий момент.
+                                                    <p>Приглашаем Вас ознакомиться с продукцией KING ROY, представленной
+                                                        в данном каталоге и будем рады
+                                                        видеть Вас в качестве наших партнеров для совместного
+                                                        продвижения инструмента KING ROY.
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="row border_top_5 py-5" id="footer" style="background-color:black"></div>
+    <div class="row border_top_5 py-5 text-center" id="footer" style="background-color:black">
+        <div class="col">
+            <a class="btn h4 btn-warning text-secondery shadow rounded font-weight-bold" href="https://kingavto.com.ua/"
+                target="_blank">Интернет-магазин</a>
+        </div>
+    </div>
+
     <div class="container-fluid bg-secondary">
-        <div class="container">
-            <div class="row text-left pb-5" style="height: 525px">
-                <div class="col-md-12 col-sm-12 col-xs-12 pt-4 h-50">
-                    <p class="h4 text-warning">
-                        По вопросам оптовых закупок:
-                    </p>
-                    <ul class="h5 text-light">
-                        <li>
-                            <span>Официальный представитель в Украине -</span>
-                            <span class="text-warning">info.kingroy@gmail.com</span>
-                        </li>
-                        <li>
-                            <span>Представительство в ОАЭ -</span>
-                            <span class="text-warning">king_w@emirates.net.ae</span>
-                        </li>
-                        <li>
-                            <span>Представительство в Тайване -</span>
-                            <span class="text-warning">info@kingroy.tw</span>
-                        </li>
-                    </ul>
-                    <p class="h4">
-                        <a class="text-warning" href="https://kingavto.com.ua/" target="_blank">Интернет-магазин</a>
-                    </p>
+        <div class="row text-left pb-5 pt-4" style="height: 525px">
+            <div class="col-auto">
+                <p class="h4 text-warning">
+                    По вопросам оптовых закупок:
+                </p>
+            </div>
+            <div class="col-auto">
+                <div class="table-responsive">
+                    <table class="table table-borderless table-sm h5">
+                        <tbody>
+                            <tr>
+                                <td class="text-light">Официальный представитель в Украине</td>
+                                <td class="pl-5 text-warning">info.kingroy@gmail.com</td>
+                            </tr>
+                            <tr>
+                                <td class="text-light">Представительство в ОАЭ</td>
+                                <td class="pl-5 text-warning">king_w@emirates.net.ae</td>
+                            </tr>
+                            <tr>
+                                <td class="text-light">Представительство в Тайване</td>
+                                <td class="pl-5 text-warning">info@kingroy.tw</td>
+                            </tr>
+                    </table>
                 </div>
+            </div>
+            <div class="col text-right">
+                <a class="text-warning" href="#navbarToggler"><i class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
             </div>
         </div>
     </div>
